<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KayitActivity" >

    <EditText
        android:id="@+id/kayitEtAdSoyad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/kayit_hint_ad_soyad">

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/kayitEtKullaniciAdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/kayit_hint_kullanici_adi"/>

    <EditText
        android:id="@+id/kayitEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kayit_hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/kayitEtSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/kayit_hint_sifre"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/kayitBtnKayit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kayit_register" />

 </LinearLayout>