<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/loginEtKullaniciAdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/login_hint_kullanici_adi">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginEtSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_hint_sifre"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button
        android:id="@+id/loginBtnGiris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_giris" />

        <Button
            android:id="@+id/loginBtnUyeOl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_uye_ol" />
        
    </LinearLayout>

</LinearLayout>